<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etVipFunction" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/author_data"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCodigo"
        android:layout_width="313dp"
        android:layout_height="62dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/code"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etValor"
        android:layout_width="313dp"
        android:layout_height="63dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/value"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCodigo" />

    <EditText
        android:id="@+id/etVipFunction"
        android:layout_width="313dp"
        android:layout_height="63dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/vip_function"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTaxa"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etTaxa"
        android:layout_width="200dp"
        android:layout_height="68dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/convenience"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/ckVip"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etValor"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />

    <CheckBox
        android:id="@+id/ckVip"
        android:layout_width="87dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:text="@string/vip"
        app:layout_constraintEnd_toEndOf="@+id/etValor"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />

    <Button
        android:id="@+id/button"
        android:layout_width="313dp"
        android:layout_height="62dp"
        android:layout_marginTop="36dp"
        android:text="@string/buy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvError" />

</androidx.constraintlayout.widget.ConstraintLayout>